--- a/style.css
+++ b/style.css
@@ -100,19 +100,19 @@ img[src="gifs/mercurio.png"]{
     position: absolute;
 }
 
-img[src="gifs/venus.gif"]{
-    height: 130px;
-    padding-right: 20px;
-}
-
-img[src="gifs/terra.gif"]{
+img[src="gifs/venus.png"]{
     height: 140px;
-    padding-right: 35px;
+    position: absolute;
 }
 
-img[src="gifs/marte.gif"]{
+img[src="gifs/terra.png"]{
+    height: 120px;
+    position: absolute;
+}
+
+img[src="gifs/marte.png"]{
     height: 135px;
-    padding-right: 30px;
+    position: absolute;
 }
     
 
@@ -142,16 +142,13 @@ img[src="gifs/marte.gif"]{
     padding-left: 1px;
     margin: 10px;
     font-size: 1.5rem; /* Tamanho da fonte */
-    color: #222831; /* Cor do texto */
+    color: #0f2647; /* Cor do texto */
 }
 
 /* Estiliza os links dentro dos itens de resultado */
 .item-resultado a {
     text-decoration: none; /* Remove o sublinhado padrão dos links */
     color: #30475E; /* Cor do texto dos links */
-}
-
-a[target="_blank"]{
     padding-left: 50px;
 }
 
